# agentic-RAG

./: AGENTS.md  agent.py  main.py  prompts.py  prompts2.py  stream_output.py  subagents.yaml
agent/: .env  .gitignore  fastapi_stream_server.py  langgraph.json  pyproject.toml  test.py  tools.py  utils.py
agent/logs/: stream_raw_log.md
agent/skills/report-writer/: SKILL.md
agent/skills/step-back-prompting/: SKILL.md
chroma_tools/: ingest_new_pdfs_to_chroma.py  query_chroma.py
docs/: prompts_old.py  tools_old.py  web_agent.yaml
logs/: Q-A.md  query.md  question.md  streams.md
skills/contextualization/: SKILL.md
skills/hyde/: SKILL.md
skills/metadata-extraction/: SKILL.md
skills/multi-query-expansion/: SKILL.md
skills/query-decomposition/: SKILL.md
